# MLOPS_IPUM_lab01_HMW

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  inference.py  main.py  pyproject.toml
tests/: test_app.py  test_inference.py
